src/App.css
body{
  background-position: center;
  background-repeat: no-repeat;
  background-size:cover;
  position: relative;
}

.backgroundImg{
  background-size: cover;

}

.App{
  font-family: 'Ubuntu', sans-serif;
  height: 100vh;
}


.App-header{
  height: 10vh;
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  border-bottom: 1px solid #ffdb42;
}

header{
  background-color: rgb(0,0,0,0.5);
}

.App-intro{
  height: 89.9vh;
}

.logo-container{
  width: 60%;
  height: 85px;
}

.App-logo{
  height: 85px;
  margin-left: 20px;
}

.App-logo:hover{
  cursor: pointer;
}

.title-container{
  width: 40%;
  font-size: 20px;
}

.App-title{
  height: 30px;
  margin-bottom: 0px;
  color: white;
}

.App-subtitle{
  margin-top: 0px;
  margin-bottom: 0px;
  color: white;
}

.dArrow-container{
  text-align: center;
  vertical-align: bottom;
  position: absolute;
  top: 85%;
  left: 50%;
  width: 64px;
  height: 64px;
}

.dArrow{
  width: 50px;
  height: 50px;
}

.dArrow:hover{
  cursor: pointer;
}

/*Navigation Bar*/
.NavBar{
  height: 85px;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    height: 85px;
    margin-top: 20px;
}

li {
    float: left;
    height: 85px;
}

li a {
    display: block;
    color: #ffdb42;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

li a:hover {
    color: white;
}

/*Text on the main page */
.main-text{
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #ffdb42;
  width:600px;
}

.intro-1{
  font-size: 60px;
  margin-bottom: 20px;
}

.intro-2{
  font-size: 30px;
}

/**About Page**/
.container{
  height: 89.9vh;
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

.content{

    width: 60%;
    font-size: 1.5em;
    color: dimgrey;
    padding-top: 20px;
}

.col-1{
  width: 20%;
}

.col-3{
  width:20%;
}

.miniContainer{
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

.mailImg{
  padding-right: 20px;
}

.linkedinImg{
  width: 32px;
  height: 80px;
  padding-right: 20px;
}

/**********Portfolio Section ****************/

.portfolio_container{
  width: 100%;
  display: flex;
  flex-wrap: wrap;
}

.pFirstPage{
  width: 100%;
  border-style: solid;
  height: 89vh;
}
.pBox{
  width: 100%;
  border-style: solid;
  height: 100vh;
}

.pBox_img{
  border-style: solid;
  border-color: red;
  height: 90vh;
}

.pBox_title{
  border-style: solid;
  border-color: green;
  height: 10vh;
}

